mobile alignment fixes

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -47,7 +47,7 @@ body {
 	font-family: $mainFont;
 	font-size: var(--base-font-size);
 	width: 100%;
-	height: 100%;
+	// height: 100%;
 	letter-spacing: .015em;
 	&.lock {
 		user-select: none;
@@ -56,9 +56,13 @@ body {
 
 body {
 	min-height: 100vh;
-	min-height: -webkit-fill-available;
-    min-height: -moz-available;
-    min-height: stretch;
+	
+	// This is bullshit... not working as expected here. Would need resize handling.
+	// min-height: -webkit-fill-available;
+    // min-height: -moz-available;
+    // min-height: stretch;
+	display: flex;
+	flex-direction: column;
 }
 
 .wrapper {
@@ -73,12 +77,10 @@ main, header {
 	padding: 0 var(--main-padding);
 }
 
-header {
-	flex: 1 0 auto;
-}
-
 main {
-	height: 100%;
+	flex: 1 0 100%;
+	display: flex;
+	flex-direction: column;
 }
 
 a, a:visited {
@@ -109,9 +111,14 @@ input, button, select, textarea {
 	padding: 0.4em;
 	margin: 0 0 0.5em 0;
 	box-sizing: border-box;
+	color: #1C1648;
 	border: 1px solid #ccc;
 	border-radius: 2px;
 	box-shadow: none;
+}
+
+select {
+	border: none;
 }
 
 .sharing {
@@ -246,10 +253,10 @@ input, button, select, textarea {
 }
 
 .modal__wrapper {
-	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	flex: 1 0 100%;
 	.stage {
 		flex: 1 0 30%;
 		display: flex;
